# templates-cruft

./: LICENSE  README.md
flatmono/: README.md
flatmono/artireg/: cookiecutter.json
flatmono/artireg-terraform/artireg/: Justfile  main.tf
flatmono/artireg/artireg/: Justfile  README.md
flatmono/flatmono-just-gha/: cookiecutter.json
flatmono/flatmono-just-gha/{{cookiecutter.project_name}}/: README.md
flatmono/image/: cookiecutter.json
flatmono/image/{{cookiecutter.image_name}}/: Justfile  README.md
flatmono/image/{{cookiecutter.project_name}}/: .hadolint.yaml  Justfile
flatmono/infra/: cookiecutter.json
flatmono/infra/{{cookiecutter.infra_name}}/: README.md
flatmono/infra/{{cookiecutter.project_name}}/: .gitignore  Justfile
flatmono/package-py/: cookiecutter.json
flatmono/package-py/py-{{cookiecutter.namespace}}-{{cookiecutter.package_name}}/: Justfile  Pipfile  README.md  pyproject.toml
flatmono/package-py/py-{{cookiecutter.namespace}}-{{cookiecutter.project_name}}/: .gitignore  Justfile  Pipfile  README.md  pyproject.toml
flatmono/package-py/py-{{cookiecutter.namespace}}-{{cookiecutter.project_name}}/tests/{{cookiecutter.namespace}}/{{cookiecutter.project_name}}/: test_{{cookiecutter.project_name}}.py
flatmono/package-py/{{cookiecutter.namespace}}-{{cookiecutter.package_name}}-py/: Pipfile
flatmono/root/: cookiecutter.json
flatmono/root/{{cookiecutter.project_name}}/: .gitignore  Justfile  README.md
flatmono/root/{{cookiecutter.project_name}}/.github/workflows/: image_pr.yaml  image_register.yaml  infra_pr.yaml  service_pr.yaml  service_register.yaml
flatmono/root/{{cookiecutter.project_name}}/images/: README.md
flatmono/root/{{cookiecutter.root_name}}/: Justfile  README.md
flatmono/root/{{cookiecutter.root_name}}/.github/workflows/: image_pr.yaml  image_register.yaml  package_pr.yaml  package_register.yaml  service_pr.yaml  service_register.yaml
flatmono/root/{{cookiecutter.root_name}}/.hooks/: pre-push
flatmono/root/{{cookiecutter.root_name}}/infra/: README.md
flatmono/service-py/: cookiecutter.json
flatmono/service-py/py-{{cookiecutter.namespace}}-{{cookiecutter.service_name}}/: .dockerignore  Dockerfile  Justfile  Pipfile  docker-compose.yaml  pyproject.toml
flatmono/service-py/py-{{cookiecutter.namespace}}-{{cookiecutter.service_name}}/src/{{cookiecutter.namespace}}/{{cookiecutter.service_name}}/: app.py
flatmono/service-py/py-{{cookiecutter.namespace}}-{{cookiecutter.service_name}}/src/{{cookiecutter.namespace}}/{{cookiecutter.service_name}}/infrastructure/: config.py
flatmono/service-py/py-{{cookiecutter.namespace}}-{{cookiecutter.service_name}}/src/{{cookiecutter.namespace}}/{{cookiecutter.service_name}}/ports/api/: health.py
flatmono/service-py/{{cookiecutter.service_name}}/: Justfile  README.md  docker-compose.yaml
flatmono/service-py/{{cookiecutter.service_name}}/scripts/: main.py
flatmono/service-py/{{cookiecutter.service_name}}/src/{{cookiecutter.namespace}}/{{cookiecutter.service_name}}/ports/api/: health.py
image-public/docker-standard/{{cookiecutter.image_name}}/: .hadolint.yaml  Justfile
packages-public/pybin/: README.md  cookiecutter.json
packages-public/pybin/py{{cookiecutter.name}}/: Justfile  build_wheels.py
packages-public/pybin/{{cookiecutter.name}}/: Justfile  README.md
packages-public/pybin/{{cookiecutter.name}}/.github/workflows/: register.yaml
packages-public/python-standard/: README.md  cookiecutter.json
packages-public/python-standard/{{cookiecutter.package_name}}/: .gitignore  Justfile  LICENSE  Pipfile  noxfile.py  pyproject.toml
packages-public/python-standard/{{cookiecutter.package_name}}/.github/: CODEOWNERS
packages-public/python-standard/{{cookiecutter.package_name}}/.github/workflows/: pr.yaml  register.yaml
project-envs/python-sci/{{cookiecutter.project_name}}/: pyproject.toml
project-envs/python-sci/{{cookiecutter.project_name}}/.github/workflows/: pr.yaml
project-envs/python-standard/{{cookiecutter.project_name}}/: .gitignore  Justfile  Pipfile  pyproject.toml
project-envs/python-standard/{{cookiecutter.project_name}}-py/: Justfile
