[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.namespace}}-{{cookiecutter.package_name}}"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    ######
    ### Custom Dependencies Below
    ######
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.package-data]
"{{cookiecutter.namespace}}.{{cookiecutter.package_name}}" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

#######
### Miscellaneous Tool Configuration
#######
[tool.black]
line-length = 150
skip-string-normalization = true
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
select = ["E", "F", "W", "I"]
line-length = 150
target-version = "py310"

[tool.ruff.isort]
known-first-party = ["{{cookiecutter.namespace}}"]

[tool.pytest.ini_options]
addopts = "-ra -q"

[tool.mypy]
mypy_path = "src"
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
