[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.namespace}}-{{cookiecutter.service_name}}"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "fastapi>0.94",
    "uvicorn>0.19",
    "gunicorn>19.6",
    "pydantic>1.1",
    "returns>0.17",
    ######
    ### Custom Dependencies Below
    ######
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.package-data]
"{{cookiecutter.namespace}}.{{cookiecutter.service_name}}" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

#######
### Miscellaneous Tool Configuration
#######
[tool.black]
line-length = 150
skip-string-normalization = true
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
select = ["E", "F", "W", "I"]
line-length = 150
target-version = "py311"

[tool.ruff.isort]
known-first-party = ["{{cookiecutter.namespace}}"]

[tool.pytest.ini_options]
addopts = "-ra -q"

[tool.mypy]
mypy_path = "src"
plugins = "returns.contrib.mypy.returns_plugin"
disallow_untyped_defs = true
disallow_any_unimported = true
allow_redefinition = false
ignore_errors = false
implicit_reexport = false
local_partial_types = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
