[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.package_name}}"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    ######
    ### Custom Dependencies Section Begin
    ######

    ######
    ### Custom Dependencies Section End
    ######
]

[dependency-groups]
dev = [
    "pip",
    "pytest>5",
    "hypothesis>5",
    "coverage>5",
    "ruff>0.2.1",
    "mypy>1.2"
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.package-data]
"{{cookiecutter.package_name}}" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

#######
### Miscellaneous Tool Configuration
#######
[tool.ruff]
line-length = 150
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-first-party = ["{{cookiecutter.package_name}}"]

[tool.pytest.ini_options]
addopts = "-ra -q --doctest-modules"
log_cli = true
log_cli_level = "WARN"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.mypy]
mypy_path = "src"
disallow_untyped_defs = true
disallow_any_unimported = true
allow_redefinition = false
ignore_errors = false
implicit_reexport = false
local_partial_types = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

######
### Custom Directives Section Begin
######

######
### Custom Directives Section End
######
